tests/error/py_errors/no_args.py
from guppy.decorator import guppy


@guppy
def foo() -> int:
    return py()
